@@ -158,7 +158,18 @@ class IsotopeGallery extends Frontend
 				return $this->arrData[$strKey];
 		}
 	}
-	
+
+
+	/**
+	 * Check whether a property is set
+	 * @param string
+	 * @return boolean
+	 */
+	public function __isset($strKey)
+	{
+		return isset($this->arrData[$strKey]);
+	}
+
 	
 	/**
 	 * If the class is echoed, return the main image
