@@ -285,6 +285,17 @@ class IsotopeProduct extends Controller
 		}
 
 	}
+
+
+	/**
+	 * Check whether a property is set
+	 * @param string
+	 * @return boolean
+	 */
+	public function __isset($strKey)
+	{
+		return isset($this->arrData[$strKey]);
+	}
 	
 	
 	/**
